--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="flexible-container">
+        <div class="half-width half-width1">
+            <h1><span class="orange-clr">Skip</span> The Diet,<br>
+                Just Eat Healthy <br>
+                With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide <br>
+                healthy and delicious food for you!</p>
+                <br>
+            <a class="link-btn" target="_blank" href="https://www.foodpanda.com.bd/">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img src="img/Group 8425.png">
+        </div>
+    </section>
+
+    <section class="About Me">
+        <img src="img/7.png" >
+        <div>
+            
+        </div>
+        <div>
+
+        </div>
+
+    </section>
 </body>
+
 </html>
