--- a/index.html
+++ b/index.html
@@ -28,16 +28,32 @@
         </div>
     </section>
 
-    <section class="About Me">
-        <img src="img/7.png" >
-        <div>
-            
-        </div>
-        <div>
+    <section class="flexible-container aboutme">
+        
+        <div class="half-width">
+            <img class="person" src="img/Person Image.png">
 
+        </div>
+        <div class="half-width half-width1">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+                <br>
+                <br>
+                <a id="btn" class="link-btn" target="_blank" href="https://www.linkedin.com/in/md-jawad-rahman-1521ba213/">Order Food</a>
         </div>
 
     </section>
+    <section class="my-recipies">
+
+    </section>
+    <footer>
+        <h3><Span class="tomato">Food</Span> Network</h3>
+        <p id="footer-p">Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 </body>
 
 </html>
