--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <a class="link-btn" target="_blank" href="https://www.foodpanda.com.bd/">Order Food</a>
         </div>
         <div class="half-width">
-            <img src="img/Group 8425.png">
+            <img src="img/Group 8425.png" width="80%">
         </div>
     </section>
 
     <section class="flexible-container aboutme">
         
         <div class="half-width">
-            <img class="person" src="img/Person Image.png">
+            <img class="person" src="img/Person Image.png" height="500" >
 
         </div>
         <div class="half-width half-width1">
@@ -48,7 +48,19 @@
 
     </section>
     <section class="my-recipies">
+        <h1>My recipies</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the<br>
+            1500s.</p>
+        <div>
 
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
     </section>
     <footer>
         <h3><Span class="tomato">Food</Span> Network</h3>
