--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
             </div>
         </div>
     </section>
+    <section class="stat-info flexible-container">
+        <div class="half-width2">
+            <h2>700k</h2>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="half-width2">
+            <h2>2.4m</h2>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="half-width2">
+            <h2>100k</h2>
+            <p>Dribbble Shot Likes</p>
+        </div>
+    </section>
     <footer>
         <h3><Span class="tomato">Food</Span> Network</h3>
         <p id="footer-p">Eat healthy to live healthy. Live healthy to live happy.</p>
