--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
     </section>
     <footer>
-        <h3><Span class="tomato">Food</Span> Network</h3>
+        <h3><Span class="food-clr">Food</Span> Network</h3>
         <p id="footer-p">Eat healthy to live healthy. Live healthy to live happy.</p>
     </footer>
 </body>
