--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br>
             Lorem Ipsum has been the industry's standard dummy text ever since the<br>
             1500s.</p>
-        <div class="flexible-container">
+        <div class="food-flexible">
             <div class="food-item">
                 <img class="food-img" src="img/Project Cover.jpg" height="200" alt="">
                 <h2>Recipie Title</h2>
@@ -81,6 +81,7 @@
             </div>
         </div>
     </section>
+    
     <section class="stat-info flexible-container">
         <div class="half-width2">
             <h2>700k</h2>
