--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
     
     <section class="stat-info flexible-container">
         <div class="half-width2">
-            <h2>700k</h2>
-            <p>Youtube Subscribers</p>
+            <h3>700k</h3>
+            <h4>Youtube Subscribers</h4>
         </div>
         <div class="half-width2">
-            <h2>2.4m</h2>
-            <p>Instagram Followers</p>
+            <h3>2.4m</h3>
+            <h4>Instagram Followers</h4>
         </div>
         <div class="half-width2">
-            <h2>100k</h2>
-            <p>Dribbble Shot Likes</p>
+            <h3>100k</h3>
+            <h4>Dribbble Shot Likes</h4>
         </div>
     </section>
     <section   class="feedback flexible-container">
@@ -97,7 +97,7 @@
 
         </div>
         <div class="half-width">
-            <img src="img/feedback.png" alt="">
+            <img id="feedback-img" src="img/feedback.png" alt="">
         </div>
     </section>
     <footer>
