--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         </div>
         <div class="half-width">
-            <img id="feedback-img" src="img/feedback.png" alt="">
+            <img  src="img/feedback.png" width="80%">
         </div>
     </section>
     <footer>
